; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rsu.c_rsu_free_tx_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_rsu.c_rsu_free_tx_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsu_softc = type { i32, i32*, i32*, i32 }

@RSU_N_TRANSFER = common dso_local global i32 0, align 4
@RSU_TX_LIST_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rsu_softc*)* @rsu_free_tx_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rsu_free_tx_list(%struct.rsu_softc* %0) #0 {
  %2 = alloca %struct.rsu_softc*, align 8
  %3 = alloca i32, align 4
  store %struct.rsu_softc* %0, %struct.rsu_softc** %2, align 8
  %4 = load %struct.rsu_softc*, %struct.rsu_softc** %2, align 8
  %5 = getelementptr inbounds %struct.rsu_softc, %struct.rsu_softc* %4, i32 0, i32 3
  %6 = call i32 @STAILQ_INIT(i32* %5)
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %26, %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @RSU_N_TRANSFER, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %29

11:                                               ; preds = %7
  %12 = load %struct.rsu_softc*, %struct.rsu_softc** %2, align 8
  %13 = getelementptr inbounds %struct.rsu_softc, %struct.rsu_softc* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = call i32 @STAILQ_INIT(i32* %17)
  %19 = load %struct.rsu_softc*, %struct.rsu_softc** %2, align 8
  %20 = getelementptr inbounds %struct.rsu_softc, %struct.rsu_softc* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = call i32 @STAILQ_INIT(i32* %24)
  br label %26

26:                                               ; preds = %11
  %27 = load i32, i32* %3, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %7

29:                                               ; preds = %7
  %30 = load %struct.rsu_softc*, %struct.rsu_softc** %2, align 8
  %31 = load %struct.rsu_softc*, %struct.rsu_softc** %2, align 8
  %32 = getelementptr inbounds %struct.rsu_softc, %struct.rsu_softc* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* @RSU_TX_LIST_COUNT, align 4
  %35 = call i32 @rsu_free_list(%struct.rsu_softc* %30, i32 %33, i32 %34)
  ret void
}

declare dso_local i32 @STAILQ_INIT(i32*) #1

declare dso_local i32 @rsu_free_list(%struct.rsu_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
